--- a/MM1.1PickingAnImage/Base.lproj/Main.storyboard
+++ b/MM1.1PickingAnImage/Base.lproj/Main.storyboard
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fCd-B3-NcP">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fCd-B3-NcP">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
                                     <barButtonItem title="Pick" id="BRh-bp-LSd">
@@ -29,25 +27,18 @@
                                 </items>
                             </toolbar>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g8O-vn-Zsu">
-                                <rect key="frame" x="200" y="200" width="200" height="200"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="d2g-lN-GOD"/>
-                                    <constraint firstAttribute="height" constant="200" id="pAl-AD-F2o"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="4yT-3y-5b1"/>
-                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="leading" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="184" id="CdP-tW-2ua"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="fCd-B3-NcP" secondAttribute="trailing" constant="-16" id="Tn5-Nn-8mP"/>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="top" relation="lessThanOrEqual" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="536" id="jVU-3f-kPq"/>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="top" secondItem="g8O-vn-Zsu" secondAttribute="bottom" constant="156" id="kb4-cF-frB"/>
-                            <constraint firstAttribute="centerX" secondItem="g8O-vn-Zsu" secondAttribute="centerX" id="laB-0M-icM"/>
-                            <constraint firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="g8O-vn-Zsu" secondAttribute="trailing" constant="184" id="ogr-FC-XYq"/>
-                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" relation="lessThanOrEqual" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="180" id="tbj-wF-pPZ"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fCd-B3-NcP" secondAttribute="bottom" id="yVo-ot-VBR"/>
+                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="58m-Jx-bP6"/>
+                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="bottom" secondItem="fCd-B3-NcP" secondAttribute="top" id="HZg-dO-mKu"/>
+                            <constraint firstAttribute="trailing" secondItem="fCd-B3-NcP" secondAttribute="trailing" id="ZfG-Li-SVi"/>
+                            <constraint firstItem="fCd-B3-NcP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dCm-8g-qpV"/>
+                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="leading" secondItem="fCd-B3-NcP" secondAttribute="leading" id="fch-xK-Svp"/>
+                            <constraint firstItem="fCd-B3-NcP" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="mPg-R7-LGf"/>
+                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="trailing" secondItem="fCd-B3-NcP" secondAttribute="trailing" id="zoa-cs-eFl"/>
                         </constraints>
                     </view>
                     <connections>
