--- a/MM1.1PickingAnImage/Base.lproj/Main.storyboard
+++ b/MM1.1PickingAnImage/Base.lproj/Main.storyboard
@@ -37,21 +37,48 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="iSi-6x-ufo"/>
                                 </items>
                             </toolbar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MMb-by-X4f">
+                                <rect key="frame" x="16" y="28" width="568" height="60"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="xOR-OI-g8r"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="45"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C8u-li-i5F">
+                                <rect key="frame" x="16" y="480" width="568" height="60"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="kbv-YV-rKK"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="45"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="58m-Jx-bP6"/>
+                            <constraint firstItem="MMb-by-X4f" firstAttribute="leading" secondItem="g8O-vn-Zsu" secondAttribute="trailing" constant="-584" id="C2G-gC-WbV"/>
                             <constraint firstItem="g8O-vn-Zsu" firstAttribute="bottom" secondItem="fCd-B3-NcP" secondAttribute="top" id="HZg-dO-mKu"/>
+                            <constraint firstItem="MMb-by-X4f" firstAttribute="centerX" secondItem="g8O-vn-Zsu" secondAttribute="centerX" id="KFR-1B-nEH"/>
+                            <constraint firstItem="C8u-li-i5F" firstAttribute="centerX" secondItem="g8O-vn-Zsu" secondAttribute="centerX" id="PIN-ih-GgA"/>
+                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="MMb-by-X4f" secondAttribute="bottom" constant="-88" id="WXy-LN-2EC"/>
                             <constraint firstAttribute="trailing" secondItem="fCd-B3-NcP" secondAttribute="trailing" id="ZfG-Li-SVi"/>
                             <constraint firstItem="fCd-B3-NcP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dCm-8g-qpV"/>
                             <constraint firstItem="g8O-vn-Zsu" firstAttribute="leading" secondItem="fCd-B3-NcP" secondAttribute="leading" id="fch-xK-Svp"/>
                             <constraint firstItem="fCd-B3-NcP" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="mPg-R7-LGf"/>
+                            <constraint firstItem="C8u-li-i5F" firstAttribute="top" secondItem="g8O-vn-Zsu" secondAttribute="bottom" constant="-76" id="um0-vz-bEI"/>
+                            <constraint firstItem="C8u-li-i5F" firstAttribute="leading" secondItem="g8O-vn-Zsu" secondAttribute="trailing" constant="-584" id="yXY-d1-ThQ"/>
                             <constraint firstItem="g8O-vn-Zsu" firstAttribute="trailing" secondItem="fCd-B3-NcP" secondAttribute="trailing" id="zoa-cs-eFl"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="bottomTextfield" destination="C8u-li-i5F" id="AEm-7I-LLV"/>
                         <outlet property="cameraButton" destination="ouI-si-q5Q" id="qvH-oK-Fhj"/>
                         <outlet property="imagePickerView" destination="g8O-vn-Zsu" id="Hhl-yd-mCp"/>
+                        <outlet property="topTextField" destination="MMb-by-X4f" id="Fxd-in-cyP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
