--- a/MM1.1PickingAnImage/Base.lproj/Main.storyboard
+++ b/MM1.1PickingAnImage/Base.lproj/Main.storyboard
@@ -42,7 +42,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f5d-sy-NLF">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <items>
-                                    <barButtonItem systemItem="action" id="6jp-iR-Rw0"/>
+                                    <barButtonItem systemItem="action" id="6jp-iR-Rw0">
+                                        <connections>
+                                            <action selector="displayActivityVC:" destination="BYZ-38-t0r" id="iP3-68-3qJ"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="zae-fW-1CG"/>
                                     <barButtonItem systemItem="cancel" id="nUB-gs-UNe"/>
                                 </items>
