--- a/MM1.1PickingAnImage/Base.lproj/Main.storyboard
+++ b/MM1.1PickingAnImage/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,36 +19,23 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g8O-vn-Zsu">
                                 <rect key="frame" x="0.0" y="64" width="600" height="492"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="kxs-Lq-fWi"/>
+                                    <constraint firstAttribute="height" constant="492" id="xyc-IP-Goa"/>
+                                </constraints>
                             </imageView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fCd-B3-NcP">
-                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="TVX-1z-Elh"/>
-                                    <barButtonItem systemItem="camera" id="ouI-si-q5Q">
-                                        <connections>
-                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="SNj-I6-4qY"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="VkH-l1-O75"/>
-                                    <barButtonItem title="Album" id="BRh-bp-LSd">
-                                        <connections>
-                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="F0D-KO-dNr"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="iSi-6x-ufo"/>
-                                </items>
-                            </toolbar>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C8u-li-i5F">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C8u-li-i5F">
                                 <rect key="frame" x="16" y="480" width="568" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="aZR-rA-h3E"/>
+                                    <constraint firstAttribute="width" constant="568" id="rNo-Y0-hgz"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="45"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MMb-by-X4f">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MMb-by-X4f">
                                 <rect key="frame" x="16" y="85" width="568" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -62,21 +48,32 @@
                             </textField>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="centerX" secondItem="C8u-li-i5F" secondAttribute="centerX" id="00h-DI-1wP"/>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="top" secondItem="C8u-li-i5F" secondAttribute="bottom" constant="16" id="ELF-Ct-4Ts"/>
-                            <constraint firstItem="MMb-by-X4f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-4" id="FMb-JK-s3Z"/>
-                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="I4R-os-Lep"/>
-                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="MMb-by-X4f" secondAttribute="bottom" constant="-81" id="NRe-ZK-BtX"/>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="leading" secondItem="g8O-vn-Zsu" secondAttribute="leading" id="W4v-0H-TbE"/>
-                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="afN-VG-S8y"/>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="trailing" secondItem="g8O-vn-Zsu" secondAttribute="trailing" id="gXJ-fo-ooE"/>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="hA1-K5-Keu"/>
-                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mye-yc-vOk"/>
+                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0cl-eM-LgP"/>
+                            <constraint firstItem="MMb-by-X4f" firstAttribute="centerX" secondItem="g8O-vn-Zsu" secondAttribute="centerX" id="1mL-UI-BHt"/>
+                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="MMb-by-X4f" secondAttribute="bottom" constant="-81" id="7rj-h5-8bc"/>
+                            <constraint firstItem="C8u-li-i5F" firstAttribute="centerX" secondItem="MMb-by-X4f" secondAttribute="centerX" id="SSh-as-MJO"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="g8O-vn-Zsu" secondAttribute="bottom" id="X5v-3u-yom"/>
                             <constraint firstItem="MMb-by-X4f" firstAttribute="leading" secondItem="C8u-li-i5F" secondAttribute="leading" id="n72-Bb-uxZ"/>
-                            <constraint firstItem="fCd-B3-NcP" firstAttribute="top" secondItem="g8O-vn-Zsu" secondAttribute="bottom" id="vSL-jB-QFk"/>
+                            <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="pXF-bu-mjs"/>
+                            <constraint firstItem="C8u-li-i5F" firstAttribute="top" secondItem="MMb-by-X4f" secondAttribute="bottom" constant="335" id="uQS-bp-Vek"/>
                             <constraint firstItem="C8u-li-i5F" firstAttribute="trailing" secondItem="MMb-by-X4f" secondAttribute="trailing" id="yQt-Kv-8zQ"/>
                         </constraints>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="h11-jU-nfF"/>
+                        <barButtonItem systemItem="camera" id="Mow-Sb-69p">
+                            <connections>
+                                <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="SoW-aX-TOG"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="UJu-bs-ur1"/>
+                        <barButtonItem title="Album" id="HQo-yF-cMA">
+                            <connections>
+                                <action selector="pickAnImage:" destination="BYZ-38-t0r" id="RD7-tm-2Ne"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="LCg-X1-gxY"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" id="UjY-xZ-Hzh">
                         <barButtonItem key="leftBarButtonItem" systemItem="action" id="iGQ-Zo-NSG">
                             <connections>
@@ -85,9 +82,10 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="tXg-nK-kUc"/>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="bottomTextfield" destination="C8u-li-i5F" id="AEm-7I-LLV"/>
-                        <outlet property="cameraButton" destination="ouI-si-q5Q" id="qvH-oK-Fhj"/>
+                        <outlet property="cameraButton" destination="Mow-Sb-69p" id="8PM-Ku-l7Q"/>
                         <outlet property="imagePickerView" destination="g8O-vn-Zsu" id="Hhl-yd-mCp"/>
                         <outlet property="topTextField" destination="MMb-by-X4f" id="Fxd-in-cyP"/>
                     </connections>
